<resources>
    <string name="app_name">KS19 Participant App</string>
    <string name="action_settings">Settings</string>
    <string-array name="cluster_list">
        <item>FlagShip Event</item>
        <item>Arts</item>
        <item>Dramatics</item>
        <item>English Lits</item>
        <item>Hindi Lits</item>
        <item>SASTRA Eastern Dance Team</item>
        <item>Telugu Lits</item>
        <item>SASTRA FotoHub</item>
        <item>சாஸ்த்ரா தமிழ்ச் சங்கம்</item>
        <item>SASTRA Music Team</item>
        <item>300 DPI</item>
    </string-array>
    <string-array name="kuruk_event_list">
        <item>Mr. &amp; Ms. Kuruksastra</item>
    </string-array>
    <string-array name="kuruk_desc_list">
        <item>Take the stage and showcase your talent for a shot at the
prestigious mr. and ms. titles</item>
    </string-array>
    <string-array name="kuruk_rules_list">
        <item>• No profanity or vulgarity will be tolerated.\n
• Individual event.\n
• first round will be a talent showcase. participants will have to bring
their own props.\n
• further rounds will be impromptu.\n
• participants will be judged based on their creativity and spontaneity.\n
• judges decision will be final</item>


    </string-array>
    <string-array name="arts_list">
        <item>Monochrome - Pencil Sketching</item>
        <item>Character Design</item>
        <item>Paper Dressing</item>
        <item>Face painting</item>
    </string-array>
    <string-array name="arts_desc_list">
        <item>Monochrome’ is a basic pencil sketching event where
        participants will have to draw and shade on the given topic
        within stipulated time.</item>

        <item>Participants have to design a new character or a new skin for
a character of their choice from any game or book or movie.</item>

        <item>Newspapers: cut them, stick them, or fold them, and finally
make them serve the purpose, and the dress will speak for
itself!</item>

        <item>A gentle stroke of the brush, A tinge of glitter and an
overflowing imagination</item>
    </string-array>
    <string-array name="arts_rules_list">
        <item>• Use of materials other than the ones provided will lead to disqualification\n
• Topics will be given on spot\n
• Judges decision is final\n
• Individual event\n
• Use of external references is not allowed</item>

        <item>• Use of materials other than the ones provided will lead to disqualification\n
• Judges decision is final\n
• Individual event\n
• Use of external references is not allowed</item>

        <item>• Use of materials other than the ones provided will lead to disqualification\n
• Topics will be given on spot\n
• Judges decision is final\n
• Maximum of 4 people per team (Minimum 2)\n
• Use of external references is not allowed</item>

        <item>• 2 per team (1 painter and 1 to be painted upon)\n
• Use of materials other than the ones provided will lead to disqualification\n
• Topics will be given on spot\n
• Judges decision is final\n
• Use of external references is not allowed</item>

    </string-array>
    <string-array name="dramatic_list">
        <item>Improv</item>
        <item>MonoAct</item>
        <item>One Act Play</item>
    </string-array>
    <string-array name="dramatics_desc_list">
        <item>With only wit by your side, are you ready to test your acting chops? Do you have
what it takes to tackle any situation thrown at you? Sharpen your wits and get
ready to think like lightning as you take on our improv event!</item>

        <item>One stage. One person. All lights on you. Do you have what it takes to steal the show?</item>

        <item>Welcome to The Studio’s flagship event! One of Kuruksastra’s biggest draws, the One Act Play is your chance to showcase your talent and cast a
spell on your audience with the magic of theatre.</item>

    </string-array>
    <string-array name="dramatics_rules_list">
        <item>• Exactly 4 participants in a team.\n
• There are multiple elimination rounds.\n
• Event specifics will be revealed on the spot (this is improv, after all.)\n
• Vulgarity and profanity are strictly prohibited.\n
• Judges’ decision is final and binding.\n
• No use of lights and sounds allowed.</item>

        <item>• Time limit is 6 to 8 minutes. Please adhere to it.\n
• The script can be a monologue or a monoact.\n
• Vulgarity and profanity are strictly prohibited.\n
• Please bring your own props and costume. You will be provided tables and chairs if
required.\n
• Original scripts carry brownie points.\n
• Judges’ decision is final and binding.</item>

        <item>• Time limit is 30 to 45 minutes, empty stage to empty stage. Please adhere to it.\n
• Vulgarity and profanity are strictly prohibited.\n
• No. of participants per team: 10 (+2 crew)\n
• Please submit your scripts by 11.59 pm, March 15 2019 to dramatics.studio@gmail.com\n
• Please bring your own props and costume. You will be provided tables and chairs if required. Directors are
requested to notify us of your requirements before March 18.</item>
    </string-array>
    <string-array name="english_lits_list">
        <item>What\'s The Good Word?</item>
        <item>CrossWord</item>
        <item>Scrabble</item>
        <item>Dumb Charades</item>
        <item>PotPurri</item>
        <item>Just A Minute(JAM)</item>
        <item>Extempore</item>
        <item>Debate</item>
        <item>The Gen Quiz</item>
        <item>Bizspent Quiz</item>
        <item>The Fandom Quiz</item>
        <item>India Quiz</item>
    </string-array>
    <string-array name="english_lits_desc_list">
        <item>Think you are punny? Have a way with words? Can find the good word no
matter how badly we present it to you? Then head right over as we test your
brain with a plethora of fun word games that will leave you wondering...
what’s the good word?”</item>

        <item>Grid? Check! CLues? Check!
What more are you waiting for?
Break the clue, twist it, turn it on its head! Do all it takes to decode the
clues and become the Cryptic master!</item>

        <item>A nostalgic board game which gets more competitive than our friendly
family matches. Scrabble to put your best tiles forward and Bingo!
You win!</item>

        <item>Actions speak louder than words. Show us your team’s chemistry by
battling it out with actions.</item>

        <item>A combination of all the events that happen at ELS. Be prepared to face any
challenge that’s thrown at you.</item>

        <item>The signature event of ELS. One minute to object. One minute to keep
talking. One minute to rule them all.</item>

        <item>Practice makes perfect, but perfect is boring. Make it up as you go!</item>

        <item>Do you like to argue relentlessly to get your point across? Engage in a
war of words at ELS’s own debate</item>

        <item>A Quiz about anything and everything under the sun including it. If you think
you know the answer to every question, this quiz is just the thing for you</item>

        <item>Find the Sportstar more appealing than The Hindu? Love a Buffet? By
combining the best of both worlds, we’ll give you more than 13 Reasons
Why you should be here.</item>

        <item>One can never have enough questions, but then winter is coming, so you have
only one shot to rule them all!
May the odds be in your favour!</item>

        <item>Think you can bombard us with the knowledge of the Great Indian
Subcontinent?
Ready your arms as you battle through the KurukSastra India Quiz at
ELS</item>
    </string-array>
    <string-array name="english_lits_rules_list">
        <item>• Teams of 2</item>

        <item>• Teams of 2\n
• Standard Cryptic Crossword rules apply</item>

        <item>• Teams of 2\n
• Official CSW15 Dictionary words only</item>

        <item>• Teams of 3 only\n
• No cross-reference</item>

        <item>• Teams of 4 only\n
• No-cross reference</item>

        <item>• Individual event</item>

        <item>• Individual Event\n
• Prelims will consist of Shipwreck/ Block and Tackle/ Spin a yarn</item>

        <item>• One goes FOR (Sp time: 4 mins), one goes Against (Sp time: 4 mins). Total 8 mins\n
• Only for the prelims, the third person will be given a topic 15 mins before his team goes
up and he will have to debate either for/against the motion with all the resources at
hand! (Impromptu debate). Speaking time includes rebuttal time too\n
• Prelims will be held during the week (Internal Participants only). External
participants can contact the event organisers to book a slot.</item>

        <item>• Teams of 3\n
• Prelims and finals</item>

        <item>• Teams of 3\n
• Will contain elements of Biz with emphasis on Sports and Ent
portions of the quiz\n
• Prelims and Finals</item>

        <item>• Teams of 3\n
• One shot quiz\n
• Fandoms not limited to HP, LoTR, ASoIaF</item>

        <item>• Teams of 2\n
• Prelims and Finals</item>
    </string-array>
    <string-array name="hindi_lits_list">
        <item>Antakshri - Geet gata chal</item>
        <item>Dramebaaz -Hindi Drama</item>
        <item>India Quiz- Mahaan Bharat</item>
        <item>Extempore – bol vachan</item>
        <item>Dumbc- isharon isharon me</item>
        <item>Debate – vaad vivaad</item>
        <item>Fun Events -matargasti</item>
        <item>Bhasha Paribhasha ( Creative writing)</item>
    </string-array>
    <string-array name="hindi_lits_desc_list">
        <item>Baithe baithe kya karein? Karna hai kuch kaam, shuru karein antakshri, leke unmaad
ka naam. Presenting the ageless “ desi” game of Antakshri, and here’s serving it with
a twist to spice it up. If you’re mad about Bollywood, We’ve got just the event for you.
From bathroom artists to stage performers, anyone who has a song for every occasion
is invited. So shed your inhibitions, refresh your memory and grab your claim to fame at
Unmaad.</item>

        <item>Are you an entertainer? Do you wish to taste the glory of a “dramebaaz”. Unmaad presents
“TAMASHA” – a platform to show us the comedian, the actor, the performer inside you. Sign
up and release that energy trusting inside you. Get crowned as the biggest nautanki and
drama queens</item>

        <item>Do you know about our incredible India? Do you know about its past, present and future?
If the answer is yes, you have what it takes to call yourself “MAHAN BHARTIYA”.</item>

        <item>In the candor inculcating… in the humor of a smile. In the lap of all tomorrow’s …we will
sit and talk awhile… few minutes is what you get.. to speak what you set..</item>

        <item>The sound of silence could never have felt this good. What with flailing hands and
frantic gestures. We assure you a riot of fun in this wildly popular battle. Bina kuch bol
ke bole to “BABU SAMJHO ISHARE”</item>

        <item>Charcha aadhunik vishiyon par aur apni tippani pradhan kare… one simply needs clarity in
thought and arguments to ace this .. just Argue Away..</item>

        <item>Once you begin being mentally and physically strong, it is easier to go and on and on, and
sooner or later something dreadful happens, but still your heart asks for more, then
join us for the event called “dil mange more” and get what you wished for</item>

        <item>Open your mind and go with the flow</item>
    </string-array>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="kuruksastra_19">Kuruksastra\'19</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="ambassador_id">Ambassador ID</string>
    <string name="college_name">College Name</string>
    <string name="register">Register</string>
</resources>