<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin_16dp">
    <android.support.v7.widget.CardView
        android:id="@+id/cardView_signup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height_register"
        app:cardElevation="28dp"
        app:cardBackgroundColor="#fff"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="4dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="48dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif-smallcaps"
                    style="@style/Base.TextAppearance.AppCompat.Display1"
                    android:id="@+id/tv_create_account"

                    android:textColor="@color/colorAccent"
                    android:text="@string/kuruksastra_19"
                    android:textSize="28sp"
                    android:padding="4dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>


                <View
                    android:id="@+id/view_above_btn_create_account"
                    app:layout_constraintTop_toBottomOf="@id/tv_create_account"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/colorPrimary"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:hint="@string/name"
                    android:textColorHint="@color/colorSecondaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_create_account">

                    <EditText
                        android:id="@+id/et_register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:fontFamily="monospace"
                        android:textColor= "@color/colorSecondaryDark" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="56dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/colorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_name">

                    <EditText
                        android:id="@+id/et__register_phoneNumber"
                        android:layout_width="match_parent"
                        android:fontFamily="monospace"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textColor="@color/colorSecondaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:baselineAligned="true"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorSecondaryLight"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_phoneNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/et_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorSecondaryDark" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="56dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    android:textColorHint="@color/colorSecondaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_email">

                    <EditText
                        android:id="@+id/et_register_password"
                        android:layout_width="match_parent"
                        android:fontFamily="monospace"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/colorSecondaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_college_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:hint="@string/college_name"
                    android:textColorHint="@color/colorSecondaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInput_password">

                    <EditText
                        android:id="@+id/et_register_college_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:fontFamily="monospace"
                        android:textColor= "@color/colorSecondaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_ambassador_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:hint="@string/ambassador_id"
                    android:textColorHint="@color/colorSecondaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInput_college_name">

                    <EditText
                        android:id="@+id/et_register_ambassador_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:fontFamily="monospace"
                        android:textColor= "@color/colorSecondaryDark" />

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/ripple_effect"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/register"
            android:textSize="28sp"
            android:onClick="onClickRegister"

            android:layout_marginTop="@dimen/margin_16dp"
            android:paddingTop="@dimen/margin_8dp"
            android:paddingBottom="@dimen/margin_8dp"
            android:elevation="@dimen/cardview_compat_inset_shadow"

            android:layout_gravity="bottom"/>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>