<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardView_login"
        app:cardElevation="28dp"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="4dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif-smallcaps"
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:id="@+id/tv_head"

                    android:textColor="@color/colorSecondaryDark"
                    android:text="@string/kuruksastra_19"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:padding="4dp"
                    android:layout_marginTop="@dimen/margin_8dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:visibility="gone"
                    android:fontFamily="sans-serif-smallcaps"

                    android:id="@+id/tv_login"

                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/login"
                    android:textSize="24sp"
                    android:padding="4dp"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="28dp"

                    app:layout_constraintTop_toBottomOf="@id/tv_head"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>


                <View
                    android:id="@+id/view_above_btn_create_account"
                    app:layout_constraintTop_toBottomOf="@id/tv_head"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/colorPrimary"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_txt_layout_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="56dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_36dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorSecondaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_login">

                    <EditText
                        android:id="@+id/et_login_email"
                        android:layout_width="match_parent"
                        android:fontFamily="monospace"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorSecondaryDark" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_txt_layout_login_et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:baselineAligned="true"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorSecondaryLight"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/input_txt_layout_login_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:inputType="textPassword"
                        android:textColor="@color/colorSecondaryDark" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/ripple_effect"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/login"
                    android:textSize="28sp"
                    android:textColor="@color/colorSecondaryDark"

                    android:layout_marginTop="36dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:elevation="@dimen/cardview_compat_inset_shadow"
                    android:onClick="onClickLogin"

                    app:layout_constraintTop_toBottomOf="@id/input_txt_layout_login_et_login_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>